--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "node": "^16.0.0"
   },
   "description": "A place for documenting GOV.UK service designs",
-  "keywords": ["design-history", "government", "govuk"],
+  "keywords": [
+    "design-history",
+    "government",
+    "govuk"
+  ],
   "author": "Becoming a teacher team",
   "license": "MIT",
   "homepage": "https://design-history.herokuapp.com",
@@ -16,7 +20,7 @@
     "copy:netlify-cms": "cpx 'node_modules/netlify-cms/dist/*.*' public/assets/javascripts/netlify-cms/ --clean --verbose",
     "clean": "rimraf public",
     "prebuild": "npm run clean && npm run copy:netlify-cms",
-    "build": "NODE_ENV=production eleventy",
+    "build": "eleventy",
     "prestart": "npm run build",
     "start": "NODE_ENV=dev eleventy --serve --quiet & npx netlify-cms-proxy-server",
     "test": "standard"
@@ -43,6 +47,7 @@
     "markdown-it-sup": "^1.0.0",
     "markdown-it-table-of-contents": "^0.6.0",
     "netlify-cms": "^2.10.192",
+    "netlify-cms-proxy-server": "^1.3.24",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
     "sass": "^1.58.3"
@@ -54,6 +59,8 @@
     "webshot-node": "^0.18.2"
   },
   "standard": {
-    "ignore": ["!.eleventy.js"]
+    "ignore": [
+      "!.eleventy.js"
+    ]
   }
 }
