--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   ],
   "author": "Becoming a teacher team",
   "license": "MIT",
-  "homepage": "https://design-history.herokuapp.com",
-  "repository": "github:DFE-Digital/govuk-design-history",
+  "homepage": "https://digital-land.github.io/design-history/",
+  "repository": "github:digital-land/design-history",
   "bugs": "https://github.com/DFE-Digital/govuk-design-history/issues",
   "scripts": {
     "copy:netlify-cms": "cpx 'node_modules/netlify-cms/dist/*.*' public/assets/javascripts/netlify-cms/ --clean --verbose",
